--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="save">သိမ်းမည်</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="loading">Loading Pdf</string>
+    <string name="please_wait">Please wait Pdf</string>
 </resources>
